diesel_compile_tests/tests/fail/update_requires_set.stderr
error[E0277]: `diesel::query_builder::update_statement::SetNotCalled` is no valid SQL fragment for the `_` backend
  --> tests/fail/update_requires_set.rs:14:18
   |
14 |         .execute(&mut conn);
   |          ------- ^^^^^^^^^ the trait `QueryFragment<_>` is not implemented for `diesel::query_builder::update_statement::SetNotCalled`, which is required by `UpdateStatement<users::table, diesel::query_builder::where_clause::NoWhereClause>: ExecuteDsl<_, _>`
   |          |
   |          required by a bound introduced by this call
   |
   = note: this usually means that the `_` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             <columns::id as QueryFragment<DB>>
             <columns::star as QueryFragment<DB>>
             <users::table as QueryFragment<DB>>
             <Box<T> as QueryFragment<DB>>
             <DeleteStatement<T, U, Ret> as QueryFragment<DB>>
             <FromClause<F> as QueryFragment<DB>>
             <diesel::query_builder::insert_statement::insert_with_default_for_sqlite::SqliteBatchInsertWrapper<Vec<diesel::query_builder::insert_statement::ValuesClause<V, Tab>>, Tab, QId, STATIC_QUERY_ID> as QueryFragment<Sqlite>>
             <BoxedLimitOffsetClause<'a, Mysql> as QueryFragment<Mysql>>
           and $N others
   = note: required for `UpdateStatement<users::table, diesel::query_builder::where_clause::NoWhereClause>` to implement `QueryFragment<_>`
   = note: required for `UpdateStatement<users::table, diesel::query_builder::where_clause::NoWhereClause>` to implement `ExecuteDsl<_, _>`
note: required by a bound in `diesel::RunQueryDsl::execute`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
   |        ------- required by a bound in this associated function
...
   |         Self: methods::ExecuteDsl<Conn>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
